# Picsou_Api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  create-api  diesel.toml  docker-compose.dev.yml  docker-compose.yaml  entrypoint.sh
.github/workflows/: deploy.yml  rust.yml
migrations/2025-03-27-221914_create_users/: down.sql  up.sql
migrations/2025-04-01-152223_create_friends/: down.sql  up.sql
migrations/2025-04-03-170843_create_group/: down.sql  up.sql
migrations/2025-04-03-171357_create_group_users/: down.sql  up.sql
migrations/2025-04-03-171614_create_payments/: down.sql  up.sql
migrations/2025-04-03-171821_create_contributors/: down.sql  up.sql
migrations/2025-04-03-172325_create_participants/: down.sql  up.sql
migrations/2025-04-03-172551_create_refunds/: down.sql  up.sql
migrations/2025-04-03-172942_create_expenses/: down.sql
migrations/2025-04-03-173133_create_expenses_evo/: down.sql
migrations/2025-05-19-190658_delete_expense_evo/: down.sql  up.sql
migrations/2025-05-19-190803_delete_expense/: down.sql
migrations/2025-05-19-190906_delete_refund/: up.sql
migrations/2025-05-19-191045_delete_participants/: up.sql
migrations/2025-05-19-191142_delete_contributors/: up.sql
migrations/2025-05-19-191349_delete_payments/: up.sql
migrations/2025-05-19-191944_alter_group_users/: down.sql  up.sql
migrations/2025-05-19-194255_alter_groups/: up.sql
migrations/2025-05-19-194854_create_V2_expense/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs
src/models/: contributor.rs  expense.rs  mod.rs  (+8 more)
(+40 files in other folders)
