[package]
name = "projet_picsou_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.40"
rocket-jwt = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2"
serde_json = "1.0"
argon2 = "0.5"
rand_core = { version = "0.9.3", features = ["std"] }